Add informations in composer.json and license

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,8 @@
 {
     "name": "thibaud-dauce/sql-view",
-    "description": "",
+    "description": "Create SQL view",
+    "license": "MIT",
+    "keywords": ["laravel", "migrations", "sql", "database"],
     "authors": [
         {
             "name": "Thibaud Dauce",
@@ -9,7 +11,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4.2.*"
+        "illuminate/support": "4.2.*",
+        "illuminate/database": "4.2.*"
     },
     "autoload": {
         "psr-0": {
